objects/Received_Application__c/Received_Application__c.object-meta.xml
<CustomObject>
    <label>Received Application</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Received Application  No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Received Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>