objects/Received_Application__c/fields/Applicant_s_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Employment_Status__c</fullName>
    <label>Applicant&apos;s Employment Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>