objects/Received_Application__c/fields/Applicant_s_Income__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Income__c</fullName>
    <label>Applicant&apos;s Income</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>