objects/Received_Application__c/fields/Applicant_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Name__c</fullName>
    <label>Applicant&apos;s Name</label>
    <type>TextArea</type>
</CustomField>