objects/Received_Application__c/fields/Applier_s_Address__c.field-meta.xml
<CustomField>
    <fullName>Applier_s_Address__c</fullName>
    <label>Applicant&apos;s Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>