objects/Received_Application__c/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <label>Credit Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>