objects/Received_Application__c/fields/Final_Verification__c.field-meta.xml
<CustomField>
    <fullName>Final_Verification__c</fullName>
    <label>Final Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>