objects/Received_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicant_s_Name__c</columns>
    <columns>Credit_Score__c</columns>
    <columns>Applicant_s_Income__c</columns>
    <columns>Final_Verification__c</columns>
    <columns>Reason_For_Rejection__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>